fix reviews going out of bounds

--- a/static/movie/stylesheet.css
+++ b/static/movie/stylesheet.css
@@ -66,6 +66,10 @@ body {
 	padding: 0;
 }
 
+p {
+	word-break: break-word;
+}
+
 .review_wrapper h1 {
 	display: inline;
 	padding: 0 1em 0 0;
